# rust-jni-example

./: .gitignore  Cargo.toml  README.md  config.ini
src/: check.rs  config.rs  errors.rs  hook.rs  lib.rs  main.rs  utility.rs
src/jvm/: jvm_internal.rs  mod.rs
src/jvmti/: capabilities.rs  errors.rs  jvmti_sys.rs  jvmti_wrapper.rs  mod.rs  sync.rs
