[package]
name = "rust_jni_example"
version = "0.1.0"
edition = "2021"
authors = ["Suzuhara"]

[lib]
crate-type = ["cdylib"]
name = "librust_jni_example"

[profile.release]
debug = false

[dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
java-locator = "0.1.7"
libloading = "0.8.3"
ini_core = "0.2.0"
json = "0.12.4"
thiserror = "1.0.58"
zip = "0.6.6"
log = "0.4.21"
env_logger = "0.11.3"
once_cell = "1.19.0"
rustop = "1.1.4"
chrono = "0.4.37"